@@ -101,6 +101,8 @@ translation in the 'users.delete.operation', 'delete.operaton' and 'operation' n
 
 [CHG] The permission constants are now constants of the WdModule class.
 
+[CHG] Renamed WdModule::T_ROOT as WdModule::T_PATH.
+
 [CHG] Changed the name scheme of the constructed config cache files.
 
 [DEL] WdObject: The `__get_them_all` method is deprecated, override the `__defer_get` method
